--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@
     stages {
       stage('fetch_latest_code') {
         steps {
-          git credentialsId: '17371c59-6b11-42c7-bb25-a37a9febb4db', url: 'https://github.com/PrashantBhatasana/terraform-jenkins-ec2'
+          git branch: 'main', credentialsId: 'b5ae8615-19a9-4699-9892-a8589191e525', url: 'https://github.com/nareshpenchikala/terraform-jenkins-ec2.git'
         }
       }
 
